accomodations: height fixed, no gaps

--- a/css/style.css
+++ b/css/style.css
@@ -279,11 +279,11 @@ input[type="submit"]:hover {
 #accomodations {
   display: flex;
   flex-flow: row wrap;
-  justify-content: space-evenly;
-  align-content: space-evenly;
+  justify-content: space-between;
+  align-content: space-between;
   order: 2;
-  gap: 25px;
   flex-basis: 67%;
+  height: 550px;
 }
 #accomodations h2,
 #accomodations > a {
@@ -295,7 +295,7 @@ input[type="submit"]:hover {
   border-radius: 15px 15px 0 0;
 }
 #accomodation article {
-  flex-basis: 33%;
+  flex-basis: 30%;
 }
 #accomodations figure {
   display: flex;
